<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.DetailsActivity">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/friends_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/image"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:id="@+id/line1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/name"
                android:padding="10dp"
                android:id="@+id/name"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/email"
                android:padding="10dp"
                android:onClick="email"
                android:id="@+id/email"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/phone"
                android:padding="10dp"
                android:id="@+id/phone"
                android:onClick="phone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Location"
                android:padding="10dp"
                android:id="@+id/friendLocation"
                />

            <TextView
                android:id="@+id/friendDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Description"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Period"
                android:padding="10dp"
                android:id="@+id/friendPeriod"
                />
        </LinearLayout>


    </RelativeLayout>


</ScrollView>
