<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UploadActivity"
    >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/image"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/friends_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/image"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:textColorHint="#000"
            android:id="@+id/textInput1"
            android:backgroundTint="#000"
            android:layout_below="@+id/image"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Friend's Name"
                android:inputType="text"
                android:id="@+id/name"
                android:textColorHint="#000"
                android:backgroundTint="#000"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:textColorHint="#000"
            android:id="@+id/textInput2"
            android:backgroundTint="#000"
            android:layout_below="@+id/textInput1"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Friend's Phone Number "
                android:inputType="number"
                android:id="@+id/phone"
                android:textColorHint="#000"
                android:backgroundTint="#000"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:textColorHint="#000"
            android:id="@+id/textInput3"
            android:backgroundTint="#000"
            android:layout_below="@+id/textInput2"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Friend's Email Address "
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:textColorHint="#000"
                android:backgroundTint="#000"
                />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:layout_marginStart="26dp"-->
<!--            android:layout_marginEnd="26dp"-->
<!--            android:textColorHint="#000"-->
<!--            android:id="@+id/textInput4"-->
<!--            android:backgroundTint="#000"-->
<!--            android:layout_below="@+id/textInput3"-->
<!--            android:layout_marginTop="10dp">-->

<!--            <Spinner-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/friend_nickname"-->
<!--                />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:textColorHint="#000"
            android:id="@+id/textInput4"
            android:backgroundTint="#000"
            android:layout_below="@+id/textInput3"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_friend_s_residence"
                android:inputType="text"
                android:id="@+id/location_prop"
                android:textColorHint="#000"
                android:backgroundTint="#000"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:textColorHint="#000"
            android:id="@+id/textInput5"
            android:backgroundTint="#000000"
            android:layout_below="@+id/textInput4"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/how_long_have_you_been_friends"
                android:inputType="text"
                android:id="@+id/friendPeriod"
                android:textColorHint="#000000"
                android:backgroundTint="#000000"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:textColorHint="#000"
            android:id="@+id/textInput6"
            android:backgroundTint="#000"
            android:layout_below="@+id/textInput5"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/enter_brief_description_of_your_friend"
                android:inputType="text"
                android:id="@+id/desc_prop"
                android:textColorHint="#000000"
                android:backgroundTint="#000000"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:textColorHint="#000"
            android:id="@+id/textInput7"
            android:backgroundTint="#000"
            android:layout_below="@+id/textInput6"
            android:layout_marginTop="10dp">
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInput7"
            android:layout_centerHorizontal="true"
            android:layout_margin="1dp"
            android:background="#2196F3"
            android:text="@string/add_friend_s_photo"
            android:textColor="#fff"
            android:textStyle="bold"
            android:id="@+id/chooseImage"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseImage"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="#9C27B0"
            android:text="@string/save_friend"
            android:textColor="#fff"
            android:textStyle="bold"
            android:id="@+id/btnSubmit"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#E91E63"
            android:layout_centerHorizontal="true"
            android:text="@string/view"
            android:layout_below="@id/btnSubmit"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:id="@+id/view"
            android:layout_marginBottom="20dp"
            />

    </RelativeLayout>

</ScrollView>
